...
}) => {
  const [menuVisible, setMenuVisible] = useState(false);

  return (
    <View>
      <TouchableOpacity
        testID="header-menu"
        style={styles.button}
        onPress={() => setMenuVisible(true)}
      >
        <View style={styles.iconBackground}>
          <Ionicons name="ellipsis-horizontal" size={22} color="#000" />
        </View>
...
